Fix style.css by removing white space

--- a/style.css
+++ b/style.css
@@ -449,6 +449,7 @@ h6 {
     font-weight: 700;
     font-size: 18px;
     line-height: 20px;
+    animation: spin 2s;
   }
 
   #menu-icon {
@@ -687,7 +688,7 @@ h6 {
   }
 
   textarea:hover::placeholder {
-    transform: translate(20px, 20px );
+    transform: translate(20px, 20px);
   }
 
   .project-3 {
@@ -698,13 +699,9 @@ h6 {
     transform: scale(1.3);
     z-index: 2;
   }
-   
-  #logo {
-    animation: spin 2s;
-  }
-  
+
   @keyframes spin {
     0.5% { -webkit-transform: rotate(50deg); }
     100% { -webkit-transform: rotate(360deg); }
   }
-} 
+}
